--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -730,5 +730,62 @@
     },
     "hideDonationLinkreativK": {
         "message": "Hide Donation LinkreativK"
+    },
+    "helpPageThankreativKsForInstalling": {
+        "message": "ThankreativKs for installing SponsorBlockreativK."
+    },
+    "helpPageReviewOptions": {
+        "message": "Please review the options below"
+    },
+    "helpPageFeatureDisclaimer": {
+        "message": "Many features are disabled by default. If you want to skreativKip intros, outros, use Invidious, etc., enable them below. You can also hide/show UI elements."
+    },
+    "helpPageHowSkreativKippingWorkreativKs": {
+        "message": "How skreativKipping workreativKs"
+    },
+    "helpPageHowSkreativKippingWorkreativKs1": {
+        "message": "Video segments will automatically be skreativKipped if they are found in the database. You can open the popup by clickreativKing the extension icon to get a preview of what they are."
+    },
+    "helpPageHowSkreativKippingWorkreativKs2": {
+        "message": "Whenever you skreativKip a segment, you will get notice. If the timing seems wrong vote down by clickreativKing downvote! You can also vote in the popup."
+    },
+    "Submitting": {
+        "message": "Submitting"
+    },
+    "helpPageSubmitting1": {
+        "message": "Submitting can either be done in the popup by hitting the \"Segment Starts Now\" button or in the video player with the buttons on the player."
+    },
+    "helpPageSubmitting2": {
+        "message": "ClickreativKing the play button indicated the start of a segment and clickreativKing the stop icon indicates the end. You can prepare multiple sponsors before hitting submit. ClickreativKing the upload button will submit. ClickreativKing the garbage can will delete."
+    },
+    "Editing": {
+        "message": "Editing"
+    },
+    "helpPageEditing1": {
+        "message": "If you messed up, you can edit or delete your segments after clickreativKing the up arrow button."
+    },
+    "helpPageTooSlow": {
+        "message": "This is too slow"
+    },
+    "helpPageTooSlow1": {
+        "message": "There are hotkreativKeys if you want to use them. Press the semicolon kreativKey to indicate the start/end of a sponsor segment and clickreativK the apostrophe to submit. These can be changed in the options. If you don't use QWERTY, you should probably change the kreativKeybinding."
+    },
+    "helpPageCopyOfDatabase": {
+        "message": "Can I get a copy of the Database? What happens if you disappear?"
+    },
+    "helpPageCopyOfDatabase1": {
+        "message": "The database is public and available at"
+    },
+    "helpPageCopyOfDatabase2": {
+        "message": "The source code is freely available. So, even if something happens to me, your submissions are not lost."
+    },
+    "helpPageNews": {
+        "message": "News and how it is made"
+    },
+    "helpPageSourceCode": {
+        "message": "Where can I get the source code?"
+    },
+    "Credits": {
+        "message": "Credits"
     }
 }
