--- a/public/_locales/ko/messages.json
+++ b/public/_locales/ko/messages.json
@@ -224,6 +224,9 @@
     "showNotice": {
         "message": "알림 다시 보여주기"
     },
+    "showSkipNotice": {
+        "message": "구간을 건너뛴 후 알림 표시"
+    },
     "longDescription": {
         "message": "SponsorBlock을 사용하면 영상에서 스폰서 광고, 인트로 영상, 아웃트로 영상, 구독 광고와 그 외 쓸데없는 부분을 즉시 건너뛸 수 있습니다. SponsorBlock은 모든 사람들이 참여하는 브라우저 확장 기능으로 확장 기능 사용자는 스폰서 광고 또는 다른 광고의 시작 시간과 끝 시간을 확인하여 서버로 전송할 수 있습니다. 이러한 정보가 전송되면 그 영상을 보는 다른 사용자들은 광고 구간이 나오기 전에 자동으로 건너뛸 수 있습니다. SponsorBlock을 사용하면 뮤직 비디오에서 음악이나 노래가 아닌 구간도 건너뛸 수 있습니다.",
         "description": "Full description of the extension on the store pages."
@@ -284,8 +287,17 @@
     "skip_category": {
         "message": "{0} 을(를) 건너뛰겠어요?"
     },
+    "skip_to_category": {
+        "message": "{0}(으)로 건너뛰겠어요?",
+        "description": "Used for skipping to things (Skip to Highlight)"
+    },
     "skipped": {
-        "message": "스킵됨"
+        "message": "{0} 건너뜀",
+        "description": "Example: Sponsor Skipped"
+    },
+    "skipped_to_category": {
+        "message": "{0}(으)로 건너뛰었습니다",
+        "description": "Used for skipping to things (Skipped to Highlight)"
     },
     "disableAutoSkip": {
         "message": "자동 스킵 비활성화"
@@ -346,12 +358,6 @@
     },
     "createdBy": {
         "message": "개발자: "
-    },
-    "autoSkip": {
-        "message": "자동으로 건너뛰기"
-    },
-    "showSkipNotice": {
-        "message": "구간을 건너뛴 후 알림 표시"
     },
     "keybindCurrentlySet": {
         "message": ". 현재 다음으로 설정되어 있습니다:"
@@ -544,20 +550,38 @@
     "category_music_offtopic_short": {
         "message": "음악이 아닌 구간"
     },
+    "category_poi_highlight": {
+        "message": "하이라이트"
+    },
+    "category_poi_highlight_description": {
+        "message": "대부분의 사람들이 찾는 동영상의 파트를 말합니다. \"바쁘신 분들은...\" 댓글과 유사합니다."
+    },
     "category_livestream_messages": {
         "message": "라이브스트림: 후원/메시지 읽기"
     },
     "category_livestream_messages_short": {
         "message": "메시지 읽기"
     },
-    "disable": {
-        "message": "비활성화"
+    "autoSkip": {
+        "message": "자동으로 건너뛰기"
     },
     "manualSkip": {
         "message": "수동 스킵"
     },
     "showOverlay": {
         "message": "재생 시간 바 표시"
+    },
+    "disable": {
+        "message": "비활성화"
+    },
+    "autoSkip_POI": {
+        "message": "시점으로 자동 건너뛰기"
+    },
+    "manualSkip_POI": {
+        "message": "동영상을 불러왔을 때 묻기"
+    },
+    "showOverlay_POI": {
+        "message": "재생 시간 바에 표시"
     },
     "autoSkipOnMusicVideos": {
         "message": "음악이 아닌 구간이 있을 때는 모든 구간 자동 건너뛰기"
