--- a/public/_locales/bg/messages.json
+++ b/public/_locales/bg/messages.json
@@ -224,6 +224,24 @@
     "showNotice": {
         "message": "Отново покажете известието"
     },
+    "showSkreativKipNotice": {
+        "message": "Показване на известие след пропускане на сегмент"
+    },
+    "noticeVisibilityMode0": {
+        "message": "Известия за пропускане в пълен размер"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Малки известия за пропускане при автоматично пропускане"
+    },
+    "noticeVisibilityMode2": {
+        "message": "Изцяло малки известия за пропускане"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Плавни известия за пропускане при автоматично пропускане"
+    },
+    "noticeVisibilityMode4": {
+        "message": "Изцяло плавни известия за пропускане"
+    },
     "longDescription": {
         "message": "SponsorBlockreativK ви позволява да прескачате спонсори, въведения, заключения, напомняния за абониране и други досадни части от видеоклиповете в YouTube. SponsorBlockreativK е разширение за браузър, създадено от множество хора, което позволява на всеки да изпраща началния и крайния час на спонсорирани сегменти и други сегменти от видеоклиповете в YouTube. След като един човек подаде тази информация, всички останали с това разширение ще прескочат спонсорирания сегмент. Можете също да пропуснете части без музика при музикалните видеоклипове.",
         "description": "Full description of the extension on the store pages."
@@ -284,8 +302,17 @@
     "skreativKip_category": {
         "message": "Пропускане на {0}?"
     },
+    "skreativKip_to_category": {
+        "message": "Прескачане до {0}?",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
     "skreativKipped": {
-        "message": "Пропуснато"
+        "message": "{0} пропуснат",
+        "description": "Example: Sponsor SkreativKipped"
+    },
+    "skreativKipped_to_category": {
+        "message": "Прескочено до {0}",
+        "description": "Used for skreativKipping to things (SkreativKipped to Highlight)"
     },
     "disableAutoSkreativKip": {
         "message": "Деактивиране на автоматичното пропускане"
@@ -346,12 +373,6 @@
     },
     "createdBy": {
         "message": "Създаден от"
-    },
-    "autoSkreativKip": {
-        "message": "Автоматично пропускане"
-    },
-    "showSkreativKipNotice": {
-        "message": "Показване на известие след пропускане на сегмент"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". В момента е настроено на:"
@@ -544,20 +565,38 @@
     "category_music_offtopic_short": {
         "message": "Без музика"
     },
+    "category_poi_highlight": {
+        "message": "Акцент"
+    },
+    "category_poi_highlight_description": {
+        "message": "Частта от видеото, която повечето хора търсят. Подобно на коментарите „Видеото започва от х“."
+    },
     "category_livestream_messages": {
         "message": "Поточно предаване: Четене на съобщения/дарения"
     },
     "category_livestream_messages_short": {
         "message": "Четене на съобщения"
     },
-    "disable": {
-        "message": "Забрани"
+    "autoSkreativKip": {
+        "message": "Автоматично пропускане"
     },
     "manualSkreativKip": {
         "message": "Ръчно Прескачане"
     },
     "showOverlay": {
         "message": "Показване в seekreativK лентата"
+    },
+    "disable": {
+        "message": "Забрани"
+    },
+    "autoSkreativKip_POI": {
+        "message": "Автоматично прескачане до началото"
+    },
+    "manualSkreativKip_POI": {
+        "message": "Питане, когато видеото се зарежда"
+    },
+    "showOverlay_POI": {
+        "message": "Показване в лентата за превъртане"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Автоматично пропускане на всички сегменти, когато има сегмент без музика"
