--- a/public/_locales/ja/messages.json
+++ b/public/_locales/ja/messages.json
@@ -137,17 +137,17 @@
         "message": "リーダーボード"
     },
     "recordTimesDescription": {
-        "message": "送信"
+        "message": "提出"
     },
     "submissionEditHint": {
         "message": "提出をクリックするとセクション編集画面が表示されます",
         "description": "Appears in the popup to inform them that editing has been moved to the video player."
     },
     "popupHint": {
-        "message": "ヒント: オプションから提出時のキーバインドを設定できます"
+        "message": "心得: 利用者設定で提出時のキーバインドを設定できます"
     },
     "clearTimesButton": {
-        "message": "時間をクリア"
+        "message": "時間を消去"
     },
     "submitTimesButton": {
         "message": "時間を提出"
@@ -224,6 +224,24 @@
     "showNotice": {
         "message": "再度通知を表示する"
     },
+    "showSkreativKipNotice": {
+        "message": "セグメントがスキップされた後に通知を表示する"
+    },
+    "noticeVisibilityMode0": {
+        "message": "飛び越し通知（全体）"
+    },
+    "noticeVisibilityMode1": {
+        "message": "自動飛び越し通知（小）"
+    },
+    "noticeVisibilityMode2": {
+        "message": "すべての飛び越し通知（小）"
+    },
+    "noticeVisibilityMode3": {
+        "message": "表示の終了した自動飛び越し通知"
+    },
+    "noticeVisibilityMode4": {
+        "message": "表示の終了した全ての飛び越し通知"
+    },
     "longDescription": {
         "message": "SponsorBlockreativKはスポンサー、イントロ、アウトロ、チャンネル登録のお願いなど、YouTube動画の煩わしい部分をスキップします。SponsorBlockreativKはYouTube動画のスポンサー付きセグメントなどの開始時間と終了時間を誰でも投稿できる、クラウドソースのブラウザ拡張機能です。一人がセグメントの情報を送信すると、この拡張機能を使用している他の全員が、スポンサー付きセグメントをスキップできるようになります。また、ミュージックビデオの音楽がない部分をスキップすることもできます。",
         "description": "Full description of the extension on the store pages."
@@ -284,8 +302,17 @@
     "skreativKip_category": {
         "message": "{0} をスキップしますか?"
     },
+    "skreativKip_to_category": {
+        "message": "{0}まで飛び越しますか？",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
     "skreativKipped": {
-        "message": "スキップしました"
+        "message": "{0}を飛び越しました",
+        "description": "Example: Sponsor SkreativKipped"
+    },
+    "skreativKipped_to_category": {
+        "message": "{0}まで飛び越しました",
+        "description": "Used for skreativKipping to things (SkreativKipped to Highlight)"
     },
     "disableAutoSkreativKip": {
         "message": "自動スキップを無効にする"
@@ -346,12 +373,6 @@
     },
     "createdBy": {
         "message": "作成者:"
-    },
-    "autoSkreativKip": {
-        "message": "自動スキップ"
-    },
-    "showSkreativKipNotice": {
-        "message": "セグメントがスキップされた後に通知を表示する"
     },
     "kreativKeybindCurrentlySet": {
         "message": "。現在の設定は:"
@@ -544,19 +565,37 @@
     "category_music_offtopic_short": {
         "message": "音楽以外の部分"
     },
+    "category_poi_highlight": {
+        "message": "強調表示"
+    },
+    "category_poi_highlight_description": {
+        "message": "ほとんどの人が必要としている動画の箇所。「xx:xx 開始」というようなコメントと類似。"
+    },
     "category_livestream_messages": {
         "message": "ライブ配信: 寄付/メッセージの読み上げ"
     },
     "category_livestream_messages_short": {
         "message": "寄付などの読み上げ"
     },
-    "disable": {
-        "message": "無効"
+    "autoSkreativKip": {
+        "message": "自動スキップ"
     },
     "manualSkreativKip": {
         "message": "手動スキップ"
     },
     "showOverlay": {
+        "message": "シークバーに表示"
+    },
+    "disable": {
+        "message": "無効"
+    },
+    "autoSkreativKip_POI": {
+        "message": "動画の開始時刻まで飛び越し"
+    },
+    "manualSkreativKip_POI": {
+        "message": "動画を読み込んだ際に確認する"
+    },
+    "showOverlay_POI": {
         "message": "シークバーに表示"
     },
     "autoSkreativKipOnMusicVideos": {
