--- a/public/_locales/pt_BR/messages.json
+++ b/public/_locales/pt_BR/messages.json
@@ -131,7 +131,7 @@
         "message": "Envios"
     },
     "savedPeopleFrom": {
-        "message": "Poupaste a outros de "
+        "message": "Você poupou as pessoas de "
     },
     "viewLeaderboard": {
         "message": "Placar de classificação"
@@ -224,6 +224,24 @@
     "showNotice": {
         "message": "Mostrar notificação outra vez"
     },
+    "showSkreativKipNotice": {
+        "message": "Mostrar Aviso Após Um Segmento Ser Ignorado"
+    },
+    "noticeVisibilityMode0": {
+        "message": "Avisos de Ignorar em Tamanho Inteiro"
+    },
+    "noticeVisibilityMode1": {
+        "message": "Avisos de Ignorar pequenos quando Pulado Automaticamente"
+    },
+    "noticeVisibilityMode2": {
+        "message": "Todos os Avisos de Ignorar em Tamanho Pequeno"
+    },
+    "noticeVisibilityMode3": {
+        "message": "Avisos de Ignorar semi-transparentes quando Pulado Automaticamente"
+    },
+    "noticeVisibilityMode4": {
+        "message": "Todos os Avisos de Ignorar semi-transparentes"
+    },
     "longDescription": {
         "message": "O SponsorBlockreativK permite que você pule patrocinadores, introduções, créditos finais, lembretes de inscrição, e outras partes irritantes dos vídeos do YouTube. O SponsorBlockreativK é uma extensão de navegador de crowdsourcing que permite enviar a qualquer um o tempo inicial e final de segmentos patrocinados de vídeos do YouTube. Assim que uma pessoa enviar essa informação, todas as outras pessoas com essa extensão irão pular o segmento patrocinado. Você também pode pular seções que não são de música dos vídeos de música.",
         "description": "Full description of the extension on the store pages."
@@ -284,8 +302,17 @@
     "skreativKip_category": {
         "message": "Pular {0}?"
     },
+    "skreativKip_to_category": {
+        "message": "Pular para {0}?",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
     "skreativKipped": {
-        "message": "Pulado"
+        "message": "{0} Ignorado",
+        "description": "Example: Sponsor SkreativKipped"
+    },
+    "skreativKipped_to_category": {
+        "message": "Pulado para {0}",
+        "description": "Used for skreativKipping to things (SkreativKipped to Highlight)"
     },
     "disableAutoSkreativKip": {
         "message": "Desativar Salto Automático"
@@ -346,12 +373,6 @@
     },
     "createdBy": {
         "message": "Criado por"
-    },
-    "autoSkreativKip": {
-        "message": "Pular automaticamente"
-    },
-    "showSkreativKipNotice": {
-        "message": "Mostrar Aviso Após um Segmento Ser Ignorado"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". Atualmente, está definido para:"
@@ -544,20 +565,38 @@
     "category_music_offtopic_short": {
         "message": "Não musical"
     },
+    "category_poi_highlight": {
+        "message": "Destaques"
+    },
+    "category_poi_highlight_description": {
+        "message": "A parte do vídeo que a maioria das pessoas procura. Similar aos comentários \"Vídeo começa aos x\"."
+    },
     "category_livestream_messages": {
         "message": "Livestream: Leituras de Doação/Mensagem"
     },
     "category_livestream_messages_short": {
         "message": "Leitura de mensagens"
     },
-    "disable": {
-        "message": "Desativar"
+    "autoSkreativKip": {
+        "message": "Pular automaticamente"
     },
     "manualSkreativKip": {
         "message": "Pular manualmente"
     },
     "showOverlay": {
         "message": "Mostrar barra de progresso"
+    },
+    "disable": {
+        "message": "Desativar"
+    },
+    "autoSkreativKip_POI": {
+        "message": "Pular automaticamente para o início"
+    },
+    "manualSkreativKip_POI": {
+        "message": "Perguntar quando o vídeo carregar"
+    },
+    "showOverlay_POI": {
+        "message": "Mostrar na barra de progresso"
     },
     "autoSkreativKipOnMusicVideos": {
         "message": "Pular automaticamente todos os segmentos quando há um segmento que não é música"
