--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -71,7 +71,7 @@
         "message": "В базе есть сегменты для этого видео!"
     },
     "sponsor404": {
-        "message": "Сегментов не найдено"
+        "message": "Сегменты не найдены"
     },
     "sponsorStart": {
         "message": "Сегмент начинается отсюда"
@@ -95,7 +95,7 @@
         "message": "Голос засчитан!"
     },
     "serverDown": {
-        "message": "Кажется, сервера не работают. Незамедлительно свяжитесь с разработчиком."
+        "message": "Кажется, сервер не отвечает. Свяжитесь с разработчиком."
     },
     "connectionError": {
         "message": "Ошибка соединения. Код ошибки: "
@@ -224,6 +224,9 @@
     "showNotice": {
         "message": "Показать уведомление снова"
     },
+    "showSkreativKipNotice": {
+        "message": "Показывать уведомление после пропуска сегмента"
+    },
     "longDescription": {
         "message": "SponsorBlockreativK позволяет пропускать спонсорские вставки, начальные и конечные заставки, просьбы подписаться и другое в видео на YouTube. SponsorBlockreativK — коллективное расширение, которое позволяет каждому отправить время начала и конца подобных сегментов в видео. После того, как кто-нибудь отправляет эту информацию, все остальные пользователи расширения будут автоматически пропускать эти сегменты. Так же можно пропускать части клипов без музыки.",
         "description": "Full description of the extension on the store pages."
@@ -284,8 +287,17 @@
     "skreativKip_category": {
         "message": "Пропустить {0}?"
     },
+    "skreativKip_to_category": {
+        "message": "Пропустить до {0}?",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
     "skreativKipped": {
-        "message": "Пропущено"
+        "message": "Пропущено: {0}",
+        "description": "Example: Sponsor SkreativKipped"
+    },
+    "skreativKipped_to_category": {
+        "message": "Пропущено до {0}",
+        "description": "Used for skreativKipping to things (SkreativKipped to Highlight)"
     },
     "disableAutoSkreativKip": {
         "message": "Отключить автоматический пропуск"
@@ -303,7 +315,7 @@
         "message": "Показывать длительность без сегментов"
     },
     "showTimeWithSkreativKipsDescription": {
-        "message": "Эта длительность отображается в скобках рядом с фактической под полосой прокрутки. Показывает длительность видео без сегментов. Включает сегменты, для которых выбрано \"Отображать в полосе прокрутки\"."
+        "message": "Длительность отображается в скобках после фактической под полосой прокрутки. Показывает длительность видео без сегментов. Включает сегменты, для которых выбрано \"Отображать в полосе прокрутки\"."
     },
     "youHaveSkreativKipped": {
         "message": "Вы пропустили "
@@ -342,16 +354,10 @@
         "message": "Установить идентификатор пользователя"
     },
     "userIDChangeWarning": {
-        "message": "Внимание: изменение идентификатора пользователя необратимо. Вы действительно хотите это сделать? Сделайте резервную копию вашего старого на всякий случай."
+        "message": "Внимание: изменение идентификатора пользователя необратимо. Вы действительно хотите это сделать? Сделайте резервную копию на всякий случай."
     },
     "createdBy": {
         "message": "Создано"
-    },
-    "autoSkreativKip": {
-        "message": "Автоматический пропуск"
-    },
-    "showSkreativKipNotice": {
-        "message": "Показывать уведомление после пропуска сегмента"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". Он сейчас назначен на:"
@@ -400,7 +406,7 @@
         "message": "Длительность отображения окошка о пропуске (в секундах):"
     },
     "skreativKipNoticeDurationDescription": {
-        "message": "Окошко о пропуске будет оставаться на экране в течение как минимум этого времени. Может быть активно дольше при пропуске вручную."
+        "message": "Окошко о пропуске будет оставаться на экране как минимум в течение этого времени. Может быть активно дольше при пропуске вручную."
     },
     "shortCheckreativK": {
         "message": "Следующий диапазон времени короче, чем Ваша настройка минимальной длительности. Это может означать, что он уже был отправлен, и просто игнорируется из-за этой настройки. Вы действительно хотите отправить?"
@@ -478,7 +484,7 @@
         "message": "Не удалось скопировать в буфер"
     },
     "copyDebugInformationOptions": {
-        "message": "Копирует информацию в буфер обмена, которая будет предоставлена разработчику при возникновении ошибки / по запросу разработчика. Такие сведения, как ID пользователя, список разрешенных каналов и адрес пользовательского сервера не передаются. Однако, отправляются ваш user agent, браузер, операционная система и номер версии расширения. "
+        "message": "Копирует в буфер обмена информацию, которая будет предоставлена разработчику при возникновении ошибки / по запросу разработчика. Такие сведения, как ID пользователя, список разрешенных каналов и адрес пользовательского сервера не передаются. Однако, отправляются ваш user agent, браузер, операционная система и номер версии расширения. "
     },
     "copyDebugInformationComplete": {
         "message": "Отладочная информация скопирована в буфер обмена. Вы можете удалить любую информацию, которой не хотите делиться. Сохраните ее в текстовом файле или вставьте в отчет об ошибке."
@@ -544,19 +550,37 @@
     "category_music_offtopic_short": {
         "message": "Без музыки"
     },
+    "category_poi_highlight": {
+        "message": "Важное"
+    },
+    "category_poi_highlight_description": {
+        "message": "Часть видео, которую ищет большинство людей. По сути заменяет комментарии типа \"Видео начинается с x:xx\"."
+    },
     "category_livestream_messages": {
         "message": "Прямые трансляции: пожертвование/чтение сообщения"
     },
     "category_livestream_messages_short": {
         "message": "Чтение сообщений"
     },
-    "disable": {
-        "message": "Отключить"
+    "autoSkreativKip": {
+        "message": "Автоматический пропуск"
     },
     "manualSkreativKip": {
         "message": "Пропускать вручную"
     },
     "showOverlay": {
+        "message": "Показывать в полосе прокрутки"
+    },
+    "disable": {
+        "message": "Отключить"
+    },
+    "autoSkreativKip_POI": {
+        "message": "Автоматически пропускать к началу видео"
+    },
+    "manualSkreativKip_POI": {
+        "message": "Спрашивать после загрузки видео"
+    },
+    "showOverlay_POI": {
         "message": "Показывать в полосе прокрутки"
     },
     "autoSkreativKipOnMusicVideos": {
@@ -645,7 +669,7 @@
         "message": "Рекомендуем включить \"Принудительная проверка каналов перед пропуском\""
     },
     "downvoteDescription": {
-        "message": "Неверно указано время"
+        "message": "Не нужен/неверно указано время"
     },
     "incorrectCategory": {
         "message": "Неверная категория"
