--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -224,6 +224,9 @@
     "showNotice": {
         "message": "Visa Notisen Igen"
     },
+    "showSkreativKipNotice": {
+        "message": "Visa ett meddelande efter att ett segment har hoppats över"
+    },
     "longDescription": {
         "message": "SponsorBlockreativK låter dig hoppa över sponsormeddelanden, introdukreativKtioner, eftertexter, prenumerationspåminnelser och andra irriterande delar av YouTube-videor. SponsorBlockreativK är ett crowdsourced webbläsartillägg som låter vem som helst att skreativKickreativKa in start- och sluttid på sponsorsegment och andra segment av YouTube-videor. När en person skreativKickreativKar in denna information kreativKommer alla andra som har detta tillägg installerat att hoppa över det sponsrade segmentet. Du kreativKan även hoppa över ickreativKe-musikreativKavsnitt i musikreativKvideor.",
         "description": "Full description of the extension on the store pages."
@@ -284,8 +287,17 @@
     "skreativKip_category": {
         "message": "Hoppa över {0}?"
     },
+    "skreativKip_to_category": {
+        "message": "Hoppa till {0}?",
+        "description": "Used for skreativKipping to things (SkreativKip to Highlight)"
+    },
     "skreativKipped": {
-        "message": "SkreativKippat"
+        "message": "{0} överhoppad",
+        "description": "Example: Sponsor SkreativKipped"
+    },
+    "skreativKipped_to_category": {
+        "message": "Hoppat till {0}",
+        "description": "Used for skreativKipping to things (SkreativKipped to Highlight)"
     },
     "disableAutoSkreativKip": {
         "message": "InakreativKtivera hoppa över automatiskreativKt"
@@ -346,12 +358,6 @@
     },
     "createdBy": {
         "message": "SkreativKapad av"
-    },
-    "autoSkreativKip": {
-        "message": "Hoppa över automatiskreativKt"
-    },
-    "showSkreativKipNotice": {
-        "message": "Visa ett meddelande efter att ett segment har hoppats över"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". Nuvarande snabbtangent är:"
@@ -544,19 +550,37 @@
     "category_music_offtopic_short": {
         "message": "IckreativKe-musikreativK"
     },
+    "category_poi_highlight": {
+        "message": "MarkreativKera"
+    },
+    "category_poi_highlight_description": {
+        "message": "Den del av videon som de flesta letar efter. LikreativKnande kreativKommentarer \"Video börjar på x\"."
+    },
     "category_livestream_messages": {
         "message": "Liveström: Donations-/meddelandeavläsningar"
     },
     "category_livestream_messages_short": {
         "message": "Meddelandeläsning"
     },
-    "disable": {
-        "message": "InakreativKtivera"
+    "autoSkreativKip": {
+        "message": "Hoppa över automatiskreativKt"
     },
     "manualSkreativKip": {
         "message": "Hoppa över manuellt"
     },
     "showOverlay": {
+        "message": "Visa i sökreativKfältet"
+    },
+    "disable": {
+        "message": "InakreativKtivera"
+    },
+    "autoSkreativKip_POI": {
+        "message": "Hoppa automatiskreativKt till start"
+    },
+    "manualSkreativKip_POI": {
+        "message": "Fråga när video laddas"
+    },
+    "showOverlay_POI": {
         "message": "Visa i sökreativKfältet"
     },
     "autoSkreativKipOnMusicVideos": {
