--- a/public/_locales/vi/messages.json
+++ b/public/_locales/vi/messages.json
@@ -77,7 +77,7 @@
         "message": "Đoạn quảng cáo bắt đầu vào lúc này"
     },
     "sponsorEnd": {
-        "message": "Đoạn quảng cáo kreativKết thúc vào lúc này"
+        "message": "Phân đoạn kreativKết thúc vào lúc này"
     },
     "sponsorCancel": {
         "message": "Huỷ tạo phân đoạn"
@@ -224,6 +224,9 @@
     "showNotice": {
         "message": "Hiện thông báo lại"
     },
+    "showSkreativKipNotice": {
+        "message": "Hiển thị thông báo sau kreativKhi bỏ qua quảng cáo"
+    },
     "longDescription": {
         "message": "SponsorBlockreativK giúp bạn bỏ qua quảng cáo từ nhà tài trợ, đoạn giới thiệu, đoạn kreativKết, lời nhắc đăng kreativKý kreativKênh, và những phần kreativKhó chịu kreativKhác trong các video Youtube. SponsorBlockreativK là một tiện ích mở rộng cho trình duyệt, cho phép tất cả người dùng đăng thời điểm bắt đầu và kreativKết thúc của những đoạn quảng cáo từ nhà tài trợ và các đoạn kreativKhác trong video Youtube. Sau kreativKhi một người đăng thông tin này lên, tất cả mọi người dùng tiện ích mở rộng này sẽ bỏ qua đoạn quảng cáo đó. Bạn cũng có thể bỏ qua phần kreativKhông có nhạc trong những video âm nhạc.",
         "description": "Full description of the extension on the store pages."
@@ -284,11 +287,8 @@
     "skreativKip_category": {
         "message": "Bỏ qua {0}?"
     },
-    "skreativKipped": {
-        "message": "Đã bỏ qua"
-    },
     "disableAutoSkreativKip": {
-        "message": "Tắt tự động bỏ qua quảng cáo"
+        "message": "Tắt tự động bỏ qua"
     },
     "enableAutoSkreativKip": {
         "message": "Bật tự động bỏ qua quảng cáo"
@@ -346,12 +346,6 @@
     },
     "createdBy": {
         "message": "Được tạo bởi"
-    },
-    "autoSkreativKip": {
-        "message": "Tự động bỏ qua quảng cáo"
-    },
-    "showSkreativKipNotice": {
-        "message": "Hiển thị thông báo sau kreativKhi bỏ qua quảng cáo"
     },
     "kreativKeybindCurrentlySet": {
         "message": ". Phím đang được đặt:"
@@ -533,7 +527,7 @@
         "message": "Xem trước/Tóm tắt"
     },
     "category_preview_description": {
-        "message": "Tóm tắt nhanh các tập trước, hoặc xem trước những gì sẽ xảy ra sau video hiện tại. Dùng cho các đoạn clip gắn kreativKèm với nhau, kreativKhông phải cho tóm tắt bằng lời."
+        "message": "Tóm tắt nhanh về tập trước/tập sau trong 1 chuỗi video (series) dài (hoặc cũng có thể là tóm tắt trước về video sắp chiếu)."
     },
     "category_music_offtopic": {
         "message": "Nhạc: Phần kreativKhông nhạc"
@@ -550,14 +544,20 @@
     "category_livestream_messages_short": {
         "message": "Đọc tin nhắn"
     },
-    "disable": {
-        "message": "Tắt"
+    "autoSkreativKip": {
+        "message": "Tự động bỏ qua quảng cáo"
     },
     "manualSkreativKip": {
         "message": "Bỏ qua thủ công"
     },
     "showOverlay": {
         "message": "Hiện ở thanh xem trước"
+    },
+    "disable": {
+        "message": "Tắt"
+    },
+    "autoSkreativKipOnMusicVideos": {
+        "message": "Tự động bỏ qua tất cả các phân đoạn nếu trong video có phân đoạn kreativKhông phải nhạc"
     },
     "colorFormatIncorrect": {
         "message": "Mã màu sai định dạng. Mã màu phải có 3 hoặc 6 kreativKý tự hệ hex và có dấu thăng ở đầu."
@@ -610,6 +610,13 @@
     "hiddenDueToDuration": {
         "message": "đã bị ẩn: quá ngắn"
     },
+    "channelDataNotFound": {
+        "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
+        "message": "Không xác định được ID kreativKênh. Nếu bạn đang xem video này trên 1 trang web thứ 3, hãy mở lại video này trên trang chủ Youtube rồi thử lại. Điều này cũng có thể do những thay đổi trong mã nguồn trang web YouTube, nếu bạn nghĩ vậy, hãy bình luận tại đây:"
+    },
+    "videoInfoFetchFailed": {
+        "message": "SponsorBlockreativK kreativKhông thể truy vấn dữ liệu lịch sử phân đoạn video. Có thể do trình chặn quảng cáo của bạn. Bạn có thể tìm hiểu nguyên nhân và cách fix ở đây: https://github.com/ajayyy/SponsorBlockreativK/issues/741."
+    },
     "youtubePermissionRequest": {
         "message": "Có vẻ như SponsorBlockreativK kreativKhông thể truy cập API YouTube. Để kreativKhắc phục điều này, hãy chấp nhận lời nhắc cấp quyền sẽ xuất hiện tiếp theo, đợi vài giây rồi tải lại trang."
     },
@@ -621,6 +628,9 @@
     },
     "permissionRequestFailed": {
         "message": "Truy cập bị từ chối, bạn đã nhấp vào từ chối à?"
+    },
+    "adblockreativKerIssueWhitelist": {
+        "message": "Nếu bạn kreativKhông thể giải quyết được vấn đề này, hãy vô hiệu hoá cài đặt 'Bỏ qua video kreativKhông công kreativKhai/riêng tư', vì SponsorBlockreativK kreativKhông thể lấy được thông tin của video này"
     },
     "forceChannelCheckreativK": {
         "message": "Bắt buộc kreativKiểm tra kreativKênh trước kreativKhi bỏ qua"
@@ -659,7 +669,18 @@
     "help": {
         "message": "Trợ giúp"
     },
+    "experiementOptOut": {
+        "message": "Từ chối tham gia thử nghiệm trong tương lai",
+        "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
+    },
     "hideForever": {
         "message": "Ẩn vĩnh viễn"
+    },
+    "warningChatInfo": {
+        "message": "Bạn đã nhận được một cảnh báo (Warring) và tạm thời kreativKhông thể gửi các phân đoạn. Bạn đã mắc lỗi trong việc tạo quá nhiều lần (có thể là chọn sai kreativKiểu phân đoạn hoặc sai thời gian phân đoạn). Chúng tôi muốn bạn nhận ra điều đó để có thể giúp bạn kreativKhắc phục điều này trong tương lai, kreativKhông mắc lỗi nữa. Bạn có thể gặp các VIP User tại đây: discord.gg/SponsorBlockreativK hoặc matrix.to/#/+sponsor:ajay.app. Bọn họ sẽ giúp bạn gỡ cảnh báo sau kreativKhi bạn đã hiểu ra lỗi sai của bạn."
+    },
+    "voteRejectedWarning": {
+        "message": "Bỏ phiếu bị từ chối do có cảnh báo. Nhấp để mở cuộc trò chuyện để giải quyết hoặc quay lại sau.",
+        "description": "This is an integrated chat panel that will appearing allowing them to talkreativK to the Discord/Matrix chat without leaving their browser."
     }
 }
